--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "ngspicehlp"
 version = "0.0.1"
 authors = [{ name = "Mark Chadwick", email = "mark.chadwick@techsharpen.com" }]
-description = "ngspice helper"
+description = "Ngspice Helper"
 readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "MIT License" }
