--- a/mypy.ini
+++ b/mypy.ini
@@ -15,8 +15,8 @@ strict = True
 # show_error_codes = True
 # warn_unused_configs = True
 
-files = *.py
-# files = ngspice_session03.py
+files = ./src/ngspicehlp/*.py
+# files = src/ngspicehlp/vectors.py
 
 # mypy_path = ./stubs/matplotlib-stubs
 
